--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.mvc.view.prefix=/WEB-INF/
+
+spring.datasource.url=jdbc:mysql://localhost:3306/testtest2023
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
